--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="generator">
     <head>
-        <title>Generator</title>
+        <title>Charts</title>
         <meta charset="utf-8">
         <meta name="google" content="notranslate">
         <meta name="author" content="Essence">
@@ -25,64 +25,67 @@
             <div class="flex-row controls">
                 <button ng-click="clearCharts()">Clear Charts</button>
             </div>
-            <form>
-                <div class="flex-row controls">
-                    <input ng-model="data.question" style="width: 100%">
-                </div>
-                <div class="flex-row" ng-repeat="answer in data.answers">
-                    <input ng-model="data.answers[$index].copy">
-                    <input ng-model="data.answers[$index].control">
-                    <input ng-model="data.answers[$index].exposed">
-                    <input ng-model="data.answers[$index].color">
-                    <input ng-model="data.answers[$index].range[0]">
-                    <input ng-model="data.answers[$index].range[1]">
-                    <input ng-model="data.answers[$index].range[2]">
-                    <button ng-click="removeAnswer($index)">X</button>
-                </div>
 
-                <div class="controls">
-                    <button ng-click="addAnswer()">+Answer</button>
-                </div>
+            <div class="flex-row controls">
+                <input ng-model="data.question" style="width: 100%">
+            </div>
+            <div class="flex-row" ng-repeat="answer in data.answers">
+                <input ng-model="data.answers[$index].copy">
+                <input ng-model="data.answers[$index].control">
+                <input ng-model="data.answers[$index].exposed">
+                <input ng-model="data.answers[$index].color">
+                <input ng-model="data.answers[$index].range[0]">
+                <input ng-model="data.answers[$index].range[1]">
+                <input ng-model="data.answers[$index].range[2]">
+                <button ng-click="removeAnswer($index)">X</button>
+            </div>
 
-                <div class="flex-row controls">
-                    <label>
-                        Theme
-                        <select ng-model="theme">
-                            <option></option>
-                            <option value="google">Google</option>
-                        </select>
-                    <label>
-                        Width
-                        <input type="number" min="0" max="100" ng-model="width">
-                    </label>
-                    <label>
-                        Background color
-                        <input ng-model="bgColor">
-                    </label>
-                    <label>
-                        Foreground color
-                        <input ng-model="fgColor">
-                    </label>
-                </div>
-                <div class="flex-row controls">
-                    <label>
-                        Bar decimals
-                        <input type="number" ng-model="barDec">
-                    </label>
-                    <label>
-                        Observed decimals
-                        <input type="number" ng-model="observedDec">
-                    </label>
-                    <label>
-                        Relative decimals
-                        <input type="number" ng-model="relativeDec">
-                    </label>
-                </div>
-            </form>
+            <div class="controls">
+                <button ng-click="addAnswer()">+Answer</button>
+            </div>
+
+            <div class="flex-row controls">
+                <label>
+                    Theme
+                    <select ng-model="theme">
+                        <option></option>
+                        <option value="google">Google</option>
+                    </select>
+                <label>
+                    Width
+                    <input type="number" min="0" max="100" ng-model="width">
+                </label>
+                <label>
+                    Background color
+                    <input ng-model="bgColor">
+                </label>
+                <label>
+                    Foreground color
+                    <input ng-model="fgColor">
+                </label>
+            </div>
+            <div class="flex-row controls">
+                <label>
+                    Bar decimals
+                    <input type="number" ng-model="barDec">
+                </label>
+                <label>
+                    Observed decimals
+                    <input type="number" ng-model="observedDec">
+                </label>
+                <label>
+                    Relative decimals
+                    <input type="number" ng-model="relativeDec">
+                </label>
+                <label>
+                    Show circle label
+                    <input type="checkbox" ng-model="showCircleLabel">
+                </label>
+            </div>
 
 
             <article style="width: {{width}}%; background-color: {{bgColor}}; color: {{fgColor}};" class="{{theme}}">
-                <perfect data="data" bar-dec="barDec" observed-dec="observedDec" relative-dec="relativeDec"></perfect>
+                <perfect data="data" bar-dec="barDec" observed-dec="observedDec" relative-dec="relativeDec" show-circle-label="showCircleLabel"></perfect>
             </article>
         </section>
 
