Essence theme, easier theme definitions

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <meta name="google" content="notranslate">
         <meta name="author" content="Essence">
         <link href='//fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+        <link href="//fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1.0">
         <link rel="stylesheet" type="text/css" href="/css/app.min.css">
     </head>
@@ -50,6 +51,7 @@
                     <select ng-model="theme">
                         <option></option>
                         <option value="google">Google</option>
+                        <option value="essence">Essence</option>
                     </select>
                 <label>
                     Width
