--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <link href='//fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
         <link href="//fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1.0">
-        <link rel="stylesheet" type="text/css" href="/css/app.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/app.min.css?v=2">
     </head>
     <body>
         <section ng-controller="perfect" class="flex-col align-middle">
