--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
                         <option></option>
                         <option value="google">Google</option>
                         <option value="essence">Essence</option>
+                        <option value="youtube">YouTube</option>
                     </select>
                 <label>
                     Width
