--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,13 @@
                         Relative decimals
                         <input type="number" ng-model="relativeDec">
                     </label>
+                    <label>
+                        Language
+                        <select ng-model="charset">
+                            <option>Default</option>
+                            <option value="japanese">Japanese</option>
+                        </select>
+                    </label>
                 </div>
             </div>
 
@@ -65,7 +72,7 @@
             </div>
 
             <div id="render-me" style="width: {{width}}%">
-                <article class="{{theme}} align-middle">
+                <article class="{{theme}} {{charset}} align-middle">
                     <perfect data="data" bar-dec="barDec" observed-dec="observedDec" relative-dec="relativeDec" show-circle-label="showCircleLabel" show-relative-lift="showRelative"></perfect>
                 </article>
             </dib>
