--- a/public/index.html
+++ b/public/index.html
@@ -75,9 +75,13 @@
                 <article class="{{theme}} {{charset}} align-middle">
                     <perfect data="data" bar-dec="barDec" observed-dec="observedDec" relative-dec="relativeDec" show-circle-label="showCircleLabel" show-relative-lift="showRelative"></perfect>
                 </article>
-            </dib>
+            </div>
+
+            <scr-chart class="{{theme}}">
+            </scr-chart>
         </main>
 
+        <script src="/js/chart.min.js"></script>
         <script src="/vendor/d2i.min.js"></script>
         <script src="/components/angular/angular.min.js"></script>
         <script src="/js/app.min.js"></script>
