--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
         <link href="//fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1.0">
         <link rel="stylesheet" type="text/css" href="/css/app.min.css?v=3">
+        <link rel="stylesheet" type="text/css" href="/css/chart.min.css">
     </head>
     <body>
-        <header>
+        <header class="nav">
             <div class="logo"></div>
             <div>Charts</div>
         </header>
@@ -77,7 +78,7 @@
                 </article>
             </div>
 
-            <scr-chart class="{{theme}}">
+            <scr-chart data="data">
             </scr-chart>
         </main>
 
