--- a/public/plugin.html
+++ b/public/plugin.html
@@ -32,7 +32,7 @@ function example1() {
         maxLift: 7
       },
       {
-        title: 'Answer dgssdg df gdf gdf gd f',
+        title: 'This is a very long answer, which has far too much copy.',
         percentages: [55, 34],
         minLift: 1,
         absLift: 3,
@@ -52,7 +52,7 @@ function example2() {
         {
             title: 'A1',
             percentages: [34, 54, 33],
-            minLift: [1, 2],
+            minLift: [1, 2], // This is the lift for each exposed branch in order
             absLift: [2, 3],
             maxLift: [4, 5]
         },
@@ -76,8 +76,45 @@ function example2() {
     document.body.appendChild(chart);
 }
 
+function example3() {
+    var question = 'Example 2';
+    var series = ['Control', 'Exposed1'];
+    var totals = [123, 456];
+    var answers = [
+        {
+            title: 'A1',
+            percentages: [34, 54],
+            minLift: undefined,
+            absLift: undefined,
+            maxLift: undefined
+        },
+        {
+            title: 'A2',
+            percentages: [54, 33],
+            minLift: null,
+            absLift: null,
+            maxLift: null
+        },
+        {
+            title: 'A2',
+            percentages: [54, 33],
+            minLift: 1,
+            absLift: 2,
+            maxLift: null
+        },
+        {
+            title: 'A3',
+            percentages: [34, 33]
+        }
+    ];
+
+    var chart = new ScrutineerQuestionChart(question, series, totals, answers);
+    document.body.appendChild(chart);
+}
+
 example1();
 example2();
+example3();
         </script>
     </body>
 </html>
