--- a/public/plugin.html
+++ b/public/plugin.html
@@ -22,7 +22,8 @@ function example1() {
         percentages: [21, 54],
         minLift: 1,
         absLift: 2,
-        maxLift: 3
+        maxLift: 3,
+        color: '#00ff00'
       },
       {
         title: 'Answer 2',
@@ -61,7 +62,8 @@ function example2() {
             percentages: [34, 54, 33],
             minLift: [1, 2],
             absLift: [2, 3],
-            maxLift: [4, 5]
+            maxLift: [4, 5],
+            color: ['#00ff00', '#ff0000']
         },
         {
             title: 'A3',
